--- a/bio.html
+++ b/bio.html
@@ -2,11 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bio – Dr. Gray & Mrs. Dr. Gray</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header class="main-header">
     <nav class="main-nav">
       <ul>
@@ -20,42 +21,56 @@
     </nav>
   </header>
 
-  <section class="bio-hero">
-    <div class="bio-text">
+  <section class="hero">
+    <div class="hero-text">
       <h1>Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Wie aus Liebe zur Musik eine echte Herzensverbindung entstand 💛</p>
+      <p>Wie aus Beats Liebe wurde – und aus Liebe eine musikalische Einheit.</p>
     </div>
   </section>
 
-  <section class="bio-content">
-    <h2>Unsere Geschichte</h2>
-    <p>
-      Was als musikalische Zusammenarbeit begann, wurde zu einer gemeinsamen Reise voller Beats, Vibes und Herzschlag. 
-      <strong>Dr. Gray</strong> – bekannt für elektronische Tiefen und technoide Energie, traf auf <strong>Mrs. Dr. Gray</strong>, 
-      deren Gesang und Leidenschaft neue Klangwelten öffnete.
-    </p>
-    <p>
-      Zusammen sind sie mehr als ein DJ-Duo: Sie sind ein Paar, das Liebe, Mode, Kreativität und Musik zu einem 
-      Gesamtwerk verbindet. 🎶❤️
-    </p>
+  <section class="bio-section">
+    
+    <div class="bio-container">
+      <img src="assets/images/drgray.jpg" alt="Dr. Gray" class="bio-image" />
+      <div class="bio-text">
+        <h2>Dr. Gray</h2>
+        <p>
+          Er war schon immer der DJ mit Herz, der die Musik für alle fühlbar gemacht hat. 
+          Beats, die Herzen treffen. Tracks, die Menschen verbinden.
+          Während seiner Livestreams auf TikTok hatte er jedoch nie mit dem gerechnet,
+          was wirklich passierte: <strong>Mrs. Dr. Gray</strong> fiel ihm auf – wieder und wieder.
+          Erst musikalisch, dann menschlich.  
+          Über die Musik hinaus begann eine Verbindung, die tiefer ging – bis aus dem DJ 
+          und der Tänzerin eine echte Einheit wurde. Heute machen sie gemeinsam Musik,
+          fühlen den Vibe und feiern die Liebe, aus der alles entstanden ist.
+        </p>
+      </div>
+    </div>
 
-    <img src="assets/images/flx10-gold.png" alt="Pioneer FLX10" class="bio-img" />
+    <div class="bio-container reverse">
+      <img src="assets/images/mrsdrgray.jpg" alt="Mrs. Dr. Gray" class="bio-image" />
+      <div class="bio-text">
+        <h2>Mrs. Dr. Gray</h2>
+        <p>
+          Sie war die heißbegehrte Tänzerin in den TikTok Lives – voller Energie, Feuer und Stil.
+          Ihre Moves zogen Blicke an, doch ihr Herz hatte sie nie verschenkt.
+          Bis eines Tages der Sound des <strong>Dr. Gray</strong> sie erwischte –
+          hart, deep, emotional. Die Musik sprach mit ihr.
+          Ein Kontakt entstand. Ein Treffen folgte. Der Rest ist Geschichte.
+          Heute lebt sie den Beat nicht nur im Tanz, sondern auch in der Musik,
+          gemeinsam mit dem Mann, der sie zum ersten Mal wirklich berührte – musikalisch und menschlich.
+        </p>
+      </div>
+    </div>
 
-    <h2>SoundCloud</h2>
-    <iframe 
-      width="100%" 
-      height="166" 
-      scrolling="no" 
-      frameborder="no" 
-      allow="autoplay" 
-      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/DEIN-SOUNDCLOUD-NAME&color=%23ffcc00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
-    </iframe>
   </section>
 
   <footer class="social-footer">
-    <p>Folge uns auf TikTok, SoundCloud & mehr ❤️</p>
+    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
+    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
 
-  <script src="main.js"></script>
 </body>
 </html>
