--- a/bio.html
+++ b/bio.html
@@ -78,7 +78,7 @@
 
     <!-- Gemeinsames Bild + Story -->
     <div style="text-align: center; margin-top: 4rem;">
-      <img src="assets/images/both.jpg" alt="Dr. & Mrs. Dr. Gray" style="max-width: 400px; width: 100%; border-radius: 1rem; box-shadow: 0 0 15px rgba(255,215,0,0.2);" />
+      <img src="assets/images/bio-together.jpg" alt="Dr. & Mrs. Dr. Gray" style="max-width: 400px; width: 100%; border-radius: 1rem; box-shadow: 0 0 15px rgba(255,215,0,0.2);" />
       <h3 style="color: gold; font-family: 'Playfair Display', serif; margin-top: 1.5rem;">💛 Eine Einheit aus Liebe & Klang</h3>
       <p style="max-width: 700px; margin: auto; color: #ccc; font-size: 1rem;">
         Gemeinsam leben sie die Musik – und die Liebe. 
