bio.html aktualisieren

--- a/bio.html
+++ b/bio.html
@@ -5,22 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bio – Dr. Gray & Mrs. Dr. Gray</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .bio-label {
-      font-family: 'Playfair Display', cursive;
-      font-size: 2rem;
-      color: gold;
-      text-align: center;
-      margin-bottom: 0.5rem;
-    }
-  </style>
 </head>
 <body>
   <header class="main-header">
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="bio.html" class="active">Bio</a></li>
+        <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="shop.html">Shop</a></li>
@@ -37,60 +28,39 @@
   </section>
 
   <section class="bio-section">
-    <div class="bio-label">Er</div>
     <div class="bio-container">
-      <img src="assets/images/drgray.jpg" alt="Dr. Gray" class="bio-image" />
-      <div class="bio-text">
-        <h2>Dr. Gray</h2>
+      <div class="bio-item">
+        <img src="assets/images/drgray.jpg" alt="Dr. Gray" class="bio-image-small" />
+        <h2 class="bio-title">Er</h2>
         <p>
-          Er war schon immer der Mann hinter den Turntables. Ein DJ mit Herz und klarer Mission: Sound, der nicht nur in den Ohren bleibt – sondern in die Seele geht. 
-          Mit seinen einzigartigen Sets auf TikTok hat er sich eine feste Fanbase aufgebaut. 
-          <br><br>
-          Als Techno-Liebhaber performt er B2B mit seiner Herzenspartnerin – und findet nun endlich nicht nur in der Musik, sondern auch im Leben seinen Rhythmus.
-          <br><br>
-          Sein Style ist geprägt von <strong>Dark Grooves, harten Drops und pulsierenden Kicks</strong>.  
-          Als Kind der Raveszene bringt er die Energie von Berlin bis Ibiza mit – aber sein Herz schlägt für den Underground.  
-          <br><br>
-          Er ist kein DJ – er ist ein Erzähler durch Klang. Jeder Mix spiegelt seinen Weg, seine Kämpfe, seine Liebe.
+          Er war schon immer der DJ mit Herz, der die Musik für alle fühlbar gemacht hat. 
+          Beats, die Herzen treffen. Tracks, die Menschen verbinden. Während seiner Livestreams auf TikTok hatte er jedoch nie mit dem gerechnet,
+          was wirklich passierte: <strong>Mrs. Dr. Gray</strong> fiel ihm auf – wieder und wieder. Erst musikalisch, dann menschlich. 
+          Über die Musik hinaus begann eine Verbindung, die tiefer ging – bis aus dem DJ und der Tänzerin eine echte Einheit wurde. 
+          Heute machen sie gemeinsam Musik, fühlen den Vibe und feiern die Liebe, aus der alles entstanden ist.
+        </p>
+      </div>
+
+      <div class="bio-item">
+        <img src="assets/images/mrsdrgray.jpg" alt="Mrs. Dr. Gray" class="bio-image-small" />
+        <h2 class="bio-title">Sie</h2>
+        <p>
+          Sie war die heißbegehrte Tänzerin in den TikTok Lives – voller Energie, Feuer und Stil. 
+          Ihre Moves zogen Blicke an, doch ihr Herz hatte sie nie verschenkt. Bis eines Tages der Sound des <strong>Dr. Gray</strong> sie erwischte –
+          hart, deep, emotional. Die Musik sprach mit ihr. Ein Kontakt entstand. Ein Treffen folgte. Der Rest ist Geschichte. 
+          Heute lebt sie den Beat nicht nur im Tanz, sondern auch in der Musik, gemeinsam mit dem Mann, der sie zum ersten Mal wirklich berührte – musikalisch und menschlich.
         </p>
       </div>
     </div>
 
-    <div class="bio-label">Sie</div>
-    <div class="bio-container reverse">
-      <img src="assets/images/mrsdrgray.jpg" alt="Mrs. Dr. Gray" class="bio-image" />
-      <div class="bio-text">
-        <h2>Mrs. Dr. Gray</h2>
-        <p>
-          Ihre Leidenschaft begann auf der Tanzfläche. Als gefeierte Performerin in TikTok Lives wurde sie zum Magnet für Aufmerksamkeit.  
-          Doch eines Tages berührte ein Beat ihr Herz – und das war der von Dr. Gray.  
-          <br><br>
-          Heute ist sie nicht nur kreative Mitgestalterin, sondern auch starke Businessfrau hinter dem Projekt: 
-          Shop, Sound-Ästhetik und Visuals – alles durch ihre Augen kuratiert. Und nun produziert sie auch selbst eigene Techno-Mixe.
-          <br><br>
-          Ihre Augen sehen mehr als nur Charts. Sie hört Emotionen, spürt Stimmungen – und bringt genau das in jede Produktion.  
-          Als Soundästhetin sorgt sie für den roten Faden im Set, plant Visuals und verwaltet den offiziellen <strong>Dr.Gray-Merchshop</strong>.
-          <br><br>
-          Ihr Ziel? Menschen berühren – nicht mit Worten, sondern mit Klang.
-        </p>
-      </div>
-    </div>
-
-    <!-- Gemeinsames Bild + Story -->
-    <div style="text-align: center; margin-top: 4rem;">
-      <img src="assets/images/bio-together.jpg" alt="Dr. & Mrs. Dr. Gray" style="max-width: 400px; width: 100%; border-radius: 1rem; box-shadow: 0 0 15px rgba(255,215,0,0.2);" />
-      <h3 style="color: gold; font-family: 'Playfair Display', serif; margin-top: 1.5rem;">💛 Eine Einheit aus Liebe & Klang</h3>
-      <p style="max-width: 700px; margin: auto; color: #ccc; font-size: 1rem;">
-        Gemeinsam leben sie die Musik – und die Liebe. 
-        Als Techno-Duo performen sie live, kuratieren kreative Sounds und gestalten eine gemeinsame Reise durch Klang, Emotion und Ästhetik.  
-        Ihr Ziel: mehr als nur Musik. Ein Gefühl, ein Statement, ein Leben in Harmonie.
-        <br><br>
-        Sie ist die kreative Kraft, Produzentin & Kuratorin –
-        Er ist der Performer, DJ & Master of Basslines.  
-        Ob <strong>Techno-Bühnen, Live-Streams oder gemeinsame Studio-Sessions</strong> –  
-        sie erschaffen eine Einheit aus Klang, Liebe und gemeinsamer Vision.
-        <br><br>
-        <span style="color: gold;">💛 Gemeinsam sind sie: Rhythmus & Gefühl. Klang & Seele. Dr. Gray & Mrs. Dr. Gray.</span>
+    <div class="bio-together">
+      <img src="assets/images/both.jpg" alt="Dr. Gray & Mrs. Dr. Gray zusammen" class="bio-image-center" />
+      <p>
+        Heute bilden sie eine harmonische musikalische Einheit. <strong>Dr. Gray</strong> – seit Jahren DJ mit Leidenschaft für harten, emotionalen Techno, 
+        und <strong>Mrs. Dr. Gray</strong> – die charismatische Performerin, die inzwischen selbst in die Welt des Mixings und Trackings eingetaucht ist. 
+        Sie übernimmt das Shop-Management, kuratiert Sounds und wird bald eigene Sets veröffentlichen. 
+        Gemeinsam spielen sie <em>B2B</em>, leben den Sound und zelebrieren die Liebe, die sie in Musik vereint. 
+        Ihr Lebensmittelpunkt ist die Bühne, ihr Seelenfrieden liegt ineinander.
       </p>
     </div>
   </section>
@@ -101,7 +71,5 @@
     <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
     <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
-
-  <script src="main.js"></script>
 </body>
 </html>
