bio.html aktualisieren

--- a/bio.html
+++ b/bio.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="bio-together">
-      <img src="assets/images/both.jpg" alt="Dr. Gray & Mrs. Dr. Gray zusammen" class="bio-image-center" />
+      <img src="assets/images/bio-together.jpg" alt="Dr. Gray & Mrs. Dr. Gray zusammen" class="bio-image-center" />
       <p>
         Heute bilden sie eine harmonische musikalische Einheit. <strong>Dr. Gray</strong> – seit Jahren DJ mit Leidenschaft für harten, emotionalen Techno, 
         und <strong>Mrs. Dr. Gray</strong> – die charismatische Performerin, die inzwischen selbst in die Welt des Mixings und Trackings eingetaucht ist. 
